# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: base.shader  lighting.shader  white.shader
src/: main.cpp
src/Core/: Window.h
src/core/: Core.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
src/gfx/: Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/gfx/buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/scenes/: MainScene.cpp  MainScene.h  Scene.h  SceneManager.cpp  SceneManager.h
